<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Add Contacts</string>
    <string name="action_location_found">location</string>
    <string name="action_refresh">Import Backup Contacts</string>
    <string name="action_refresh1">Import Phone Contacts</string>
    <string name="action_help">Export Contacts</string>
    <string name="action_check_updates">Remove Duplicates</string>

</resources>