<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search / will display always -->
    <item android:id="@+id/add_contact"
          android:icon="@drawable/images"
          android:title="@string/action_search"
          android:showAsAction="ifRoom"/>
     
    <!-- Location Found 
    <item android:id="@+id/action_location_found"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_location_found"
          android:showAsAction="ifRoom" /> -->
     
    <!-- Refresh -->
    <item android:id="@+id/importcontact"
          android:icon="@drawable/images"
          android:title="@string/action_refresh"
          android:showAsAction="never" /> 
          
    <item android:id="@+id/importcontact1"
          android:icon="@drawable/images"
          android:title="@string/action_refresh1"
          android:showAsAction="never" /> 
     
     <item android:id="@+id/exportcontact"
          android:icon="@drawable/images"
          android:title="@string/action_help"
          android:showAsAction="never"/>
    <!-- Help 
    <item android:id="@+id/exportcontact"
          android:icon="@drawable/images"
          android:title="@string/action_help"
          android:showAsAction="never"/>  -->
     
    <!-- Check updates -->
    <item android:id="@+id/removediplicate"
          android:icon="@drawable/images"
          android:title="@string/action_check_updates"
          android:showAsAction="never"/>
           
</menu>
 
